hphp/hack/test/typecheck/readonly/ternary.php.exp
File "ternary.php", line 25, characters 3-4:
This value is readonly, its properties cannot be modified (Typing[4409])
